Fixed select element option colors so the states are visible

--- a/stylesheets/sql_query.css
+++ b/stylesheets/sql_query.css
@@ -102,7 +102,7 @@ select {
 }
 select option {
   background-color: #FFFFFF;
-  color: white;
+  color: #333;
   font-size: 16px;
 }
 
